--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "babel-preset-es2015": "~6.3.13"
   },
   "devDependencies": {
-    "babel-cli": "~6.4.5"
+    "babel-cli": "^6.26.0"
   },
   "scripts": {
-    "prepublish": "babel --presets es2015,react js/jsx/ --out-dir js/bin/"
+    "prepublish": "./node_modules/.bin/babel --presets es2015,react js/jsx/ --out-dir js/bin/"
   },
   "repository": {
     "type": "git",
